<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph3"
        android:layout_width="347dp"
        android:layout_height="178dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="78dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="121dp"
        android:layout_marginLeft="121dp"
        android:layout_marginRight="121dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="5dp"
        android:text="@string/String_false_Função"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_falsa"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="110dp"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="110dp"
        android:layout_marginStart="96dp"
        android:text="@string/btn_calcular_falsa"
        app:layout_constraintBottom_toTopOf="@+id/graph3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent"
        tools:textSize="14sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginRight="71dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_false_Função"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="20dp"
        android:layout_height="16dp"
        android:layout_marginLeft="83dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="18dp"
        android:text="@string/String_false_A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="28dp"
        android:layout_height="16dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginTop="16dp"
        android:text="@string/String_false_B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_false_A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="23dp"
        android:layout_height="18dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:text="@string/String_false_Tol"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.357" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="15dp"
        android:layout_height="18dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:text="@string/String_false_X"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="16dp"
        android:layout_height="17dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginTop="28dp"
        android:text="@string/String_false_N"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="58dp"
        android:layout_height="43dp"
        android:layout_marginBottom="52dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_false_Tol"
        app:layout_constraintBottom_toTopOf="@+id/button_falsa"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="58dp"
        android:layout_height="44dp"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginStart="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_false_X"
        app:layout_constraintBottom_toTopOf="@+id/button_falsa"
        app:layout_constraintEnd_toStartOf="@+id/editText6"
        app:layout_constraintStart_toEndOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="58dp"
        android:layout_height="44dp"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editext_false_N"
        app:layout_constraintBottom_toTopOf="@+id/button_falsa"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_false_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</android.support.constraint.ConstraintLayout>