<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView_tamanho_B2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:text="@string/textView_tamanho_B_GJ"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_matrizA_GJ" />

    <Button
        android:id="@+id/GJ_botao_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:layout_marginBottom="136dp"
        android:text="@string/btn_GJ_calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_matrizB_GJ"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_tamanho_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="156dp"
        android:layout_marginLeft="159dp"
        android:layout_marginRight="156dp"
        android:layout_marginStart="159dp"
        android:text="@string/textView_tamanho_A_GJ"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="34dp" />

    <EditText
        android:id="@+id/editText_GJ_dimensoesA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:ems="10"
        android:hint="@string/txt_hint_tamanho_A_GJ"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_tamanho_A" />

    <EditText
        android:id="@+id/txt_matrizA_GJ"
        android:layout_width="214dp"
        android:layout_height="131dp"
        android:layout_marginEnd="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="top"
        android:hint="2 1 -1\n5 2 2\n3 1 1 "
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_GJ_dimensoesA" />

    <EditText
        android:id="@+id/editText_matrizB_GJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:ems="10"
        android:hint="1 -4 5"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_tamanho_B2" />

</android.support.constraint.ConstraintLayout>